overflow fix

--- a/style.css
+++ b/style.css
@@ -5,10 +5,6 @@
 	        box-sizing: border-box;
 }
 
-.row {
-    margin-right: -15px;
-    margin-left: -15px;
-}
 
 body {
 	font-size: 16px;
